--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^1.0.0",
     "@react-native-community/async-storage": "^1.10.0",
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/netinfo": "^4.7.0",
     "@react-native-community/slider": "^2.0.9",
@@ -28,6 +29,7 @@
     "react-native-dash": "0.0.11",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.6",
