--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^1.0.0",
     "@react-native-community/async-storage": "^1.10.0",
+    "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/netinfo": "^4.7.0",
@@ -27,8 +28,10 @@
     "react-native-camera-kit": "^8.0.4",
     "react-native-confirmation-code-field": "^4.2.0",
     "react-native-dash": "0.0.11",
+    "react-native-elements": "^2.0.0",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-places-autocomplete": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.26.1",
@@ -42,6 +45,7 @@
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-step-indicator": "0.0.11",
     "react-native-svg": "^9.13.6",
     "react-native-swiper": "^1.6.0",
