--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
 
     <application
       android:name=".MainApplication"
@@ -32,7 +34,7 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="@string/google_scheme"/>
+        android:value="AIzaSyDIZ6k-UKsT6ALVRUlIp21YdSTQL4Y7HH8"/>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" 
         android:value="@string/facebook_app_id"/>
@@ -51,6 +53,7 @@
               <data android:scheme="@string/fb_login_protocol_scheme" />
           </intent-filter>
       </activity>
+      
     </application>
 
 </manifest>
