--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-android-location-services-dialog-box": "^2.8.2",
+    "react-native-base64": "0.0.2",
     "react-native-camera-kit": "^8.0.4",
     "react-native-confirmation-code-field": "^4.2.0",
     "react-native-dash": "0.0.11",
     "react-native-elements": "^2.0.0",
     "react-native-fbsdk": "^1.1.2",
+    "react-native-fs": "^2.16.6",
+    "react-native-geocoding": "^0.4.0",
+    "react-native-geolocation-service": "^4.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-maps-places-autocomplete": "^1.0.2",
     "react-native-google-places-autocomplete": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -38,6 +43,7 @@
     "react-native-modal": "^11.5.6",
     "react-native-modalbox": "^2.0.0",
     "react-native-pages": "^0.9.0",
+    "react-native-paper": "^3.10.1",
     "react-native-permissions": "^2.1.4",
     "react-native-photo-upload": "^1.3.0",
     "react-native-popup-menu": "^0.15.7",
